--- a/client/app/index.html
+++ b/client/app/index.html
@@ -7,6 +7,8 @@
 		<link rel="stylesheet" type="text/css" href="styles/home.css" />
 		<link rel="stylesheet" type="text/css" href="styles/search.css" />
 		<link rel="stylesheet" type="text/css" href="styles/detail.css" />
+		
+		<link rel="stylesheet" type="text/css" href="styles/bibliotheques/ngDialog.min.css" />
         <title> Emovies </title>        
 	</head>
 	<body  ng-app="routeApp">
@@ -20,8 +22,8 @@
 			<section id="middle">
                 <div id="middleLeft">
                     <nav>
-                        Menu
-                        <ul>
+                        Menu <input type="checkbox" ng-model="displayFavoriteSeries">
+                        <ul ng-show="displayFavoriteSeries">
                             <li>Films</li>
                             <li>Series</li>
                         </ul>
@@ -33,7 +35,6 @@
                         <div id="btnLeft">
                             <ul>
                                 <li><a href="#back">Retour</a></li>
-
                                 <li><a href="#home">Acceuil</a></li>
                                 <li>Rechercher</li>
                             </ul>
@@ -69,6 +70,9 @@
 		<script src="scripts/bower_components/angular-route/angular-route.js"></script>
 		<script src="scripts/bower_components/angular-sanitize/angular-sanitize.js"></script>
 		<script src="scripts/bower_components/angular-touch/angular-touch.js"></script>
+		
+		<script src="scripts/bower_components/ngDialog.min.js"></script>
+		<script src="scripts/bower_components/ui-bootstrap-tpls-2.1.3.min.js"></script>
 			<!-- endbower -->
 		<!--script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/angularjs/1.0.3/angular.min.js"></script-->
 		<script type="text/javascript" src="configRoute.js"></script>
