--- a/client/app/index.html
+++ b/client/app/index.html
@@ -9,6 +9,8 @@
 		<link rel="stylesheet" type="text/css" href="styles/detail.css" />
 		
 		<link rel="stylesheet" type="text/css" href="styles/bibliotheques/ngDialog.min.css" />
+		<link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css" />
+		
         <title> Emovies </title>        
 	</head>
 	<body  ng-app="routeApp">
@@ -77,6 +79,7 @@
 		<!--script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/angularjs/1.0.3/angular.min.js"></script-->
 		<script type="text/javascript" src="configRoute.js"></script>
 		<script type="text/javascript" src="scripts/controllers/pagesControllers.js"></script>
+		<script type="text/javascript" src="scripts/controllers/jquery-3.1.0.min.js"></script>
 		
 	</body>	
 </html>
