--- a/client/app/index.html
+++ b/client/app/index.html
@@ -8,6 +8,16 @@
 		<link rel="stylesheet" type="text/css" href="styles/search.css" />
 		<link rel="stylesheet" type="text/css" href="styles/detail.css" />
 		
+		<!-- ajouter -->
+                    <link rel="icon" href="data:;base64,iVBORw0KGgo=">
+                    <link rel="stylesheet" href="styles/bibliotheques/dialogues/ngDialog.css">
+                    <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,400italic' rel='stylesheet' type='text/css'>
+                    <link rel="stylesheet" href="styles/bibliotheques/dialogues/ngDialog-theme-default.css">
+                    <link rel="stylesheet" href="styles/bibliotheques/dialogues/ngDialog-theme-plain.css">
+                    <link rel="stylesheet" href="styles/bibliotheques/dialogues/ngDialog-custom-width.css">
+                    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.0/angular.min.js"></script>                    
+                <!-- FIN AJOUT -->
+		
 		<link rel="stylesheet" type="text/css" href="styles/bibliotheques/ngDialog.min.css" />
 		<link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css" />
 		
