--- a/client/app/index.html
+++ b/client/app/index.html
@@ -15,7 +15,10 @@
                     <link rel="stylesheet" href="styles/bibliotheques/dialogues/ngDialog-theme-default.css">
                     <link rel="stylesheet" href="styles/bibliotheques/dialogues/ngDialog-theme-plain.css">
                     <link rel="stylesheet" href="styles/bibliotheques/dialogues/ngDialog-custom-width.css">
-                    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.0/angular.min.js"></script>                    
+                    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.0/angular.min.js"></script>    
+                    
+                    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+                    <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
                 <!-- FIN AJOUT -->
 		
 		<link rel="stylesheet" type="text/css" href="styles/bibliotheques/ngDialog.min.css" />
