--- a/client/app/index.html
+++ b/client/app/index.html
@@ -33,7 +33,7 @@
 					  }
 
 					  .affix + .container-fluid {
-					      padding-top: 70px;
+					      padding-top: 30px;
 					  }
 					  </style>
                 <!-- FIN AJOUT -->
@@ -41,27 +41,27 @@
 		<link rel="stylesheet" type="text/css" href="styles/bibliotheques/ngDialog.min.css" />
 		<!--link rel="stylesheet" href="http://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js" /-->
 		
-        <title> Emovies </title>        
+        <title> e-movies </title>        
 	</head>
 	<body  ng-app="routeApp">
 		<div id="main">
-			<header class="container-fluid">
+			<header>
 				<div class="logo" >
                     <a href="#home"><img src="images/logos/banniere.png" /></a>
 				</div>				
 			</header>
-			<nav class="navbar navbar-inverse" data-spy="affix" data-offset-top="197">
+			<!--nav class="navbar navbar-inverse" data-spy="affix" data-offset-top="197">
 							  <ul class="nav navbar-nav">
 							    <li class="active"><a href="#">Basic Topnav</a></li>
 							    <li><a href="#">Page 1</a></li>
 							    <li><a href="#">Page 2</a></li>
 							    <li><a href="#">Page 3</a></li>
 							  </ul>
-							</nav>
+							</nav-->
 
 
-			 <!--nav nav class="navbar navbar-inverse" data-spy="affix" data-offset-top="197">
-			  <div class="container-fluid">
+			 <nav nav class="navbar navbar-inverse" data-spy="affix" data-offset-top="197">
+			  
 			    <div class="navbar-header">
 			      <a class="navbar-brand" href="#home">e-movies</a>
 			    </div>
@@ -74,8 +74,8 @@
 			    	<li><a href="#">Connexion</a></li>
 			    	<li><a href="#">Inscription</a></li>
 			    </ul>
-			  </div>
-			</nav--> 
+			  
+			</nav> 
 			
 			<section id="middle">
                 <div id="middleLeft">
