--- a/client/app/index.html
+++ b/client/app/index.html
@@ -8,12 +8,12 @@
 		<link rel="stylesheet" type="text/css" href="styles/home.css" />
 		<link rel="stylesheet" type="text/css" href="styles/search.css" />
 		<link rel="stylesheet" type="text/css" href="styles/detail.css" />
-
-		<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
- 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-  		<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 		
 		<!-- ajouter -->
+					<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+ 					<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+  					<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+
                     <link rel="icon" href="data:;base64,iVBORw0KGgo=">
                     <link rel="stylesheet" href="styles/bibliotheques/dialogues/ngDialog.css">
                     <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,400italic' rel='stylesheet' type='text/css'>
@@ -22,8 +22,6 @@
                     <link rel="stylesheet" href="styles/bibliotheques/dialogues/ngDialog-custom-width.css">
                     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.0/angular.min.js"></script>    
                     
-                    <!--link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-                    <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script-->
 
                     <style>
 					  /* Note: Try to remove the following lines to see the effect of CSS positioning */
@@ -33,13 +31,12 @@
 					  }
 
 					  .affix + .container-fluid {
-					      padding-top: 30px;
+					      padding-top: 70px;
 					  }
 					  </style>
                 <!-- FIN AJOUT -->
 		
 		<link rel="stylesheet" type="text/css" href="styles/bibliotheques/ngDialog.min.css" />
-		<!--link rel="stylesheet" href="http://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js" /-->
 		
         <title> e-movies </title>        
 	</head>
@@ -68,7 +65,7 @@
 			    <ul class="nav navbar-nav">
 			      <li><a href="#back">Retour</a></li>
 			      <li class="active"><a href="#home">Accueil</a></li>
-			      <li><a href="#search">Recherche</a></li>
+			      <li><a href="#achat">Recherche</a></li>
 			    </ul>
 			    <ul class="nav navbar-nav navbar-right">
 			    	<li><a href="#">Connexion</a></li>
