--- a/client/app/index.html
+++ b/client/app/index.html
@@ -8,6 +8,7 @@
 		<link rel="stylesheet" type="text/css" href="styles/home.css" />
 		<link rel="stylesheet" type="text/css" href="styles/search.css" />
 		<link rel="stylesheet" type="text/css" href="styles/detail.css" />
+		<link rel="stylesheet" type="text/css" href="styles/achat.css" />
 		
 		<!-- ajouter -->
 					<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
