--- a/client/app/index.html
+++ b/client/app/index.html
@@ -37,7 +37,7 @@
 		<div id="main">
 			<header>
 				<div class="logo" >
-                    <a href="#home"><img src="images/logos/banniere.png" /></a>
+                    <a href="#home"><img src="images/logos/logo1.png" /></a>
 				</div>				
 			</header>
 			
