--- a/client/app/index.html
+++ b/client/app/index.html
@@ -348,7 +348,7 @@
 					<tr ng-repeat="data in dataPanier1">
 						<td>{{data[0]}} </td>
 						<td>{{data[1]}}</td>
-						<td>Copie Numerique</td>
+						<td>{{data[2]}}</td>
 						<td>{{data[3]}}</td>
 						<td>{{data[4]}}€</td>
 						<td>{{data[3]*data[4]}}€</td>
