--- a/client/app/index.html
+++ b/client/app/index.html
@@ -368,7 +368,7 @@
 				<h3>Le panier est vide !</h3>
 			</div>	
 			<div class="modal-footer">
-				<button type="submit" class="btn btn-primary" ng-click="clearPanier()" data-dismiss="modal" >Payer</button>
+				<button type="submit" class="btn btn-primary" ng-click="clearPanier()" data-dismiss="modal" ng-show="dansPanier[0]">Payer</button>
 				<button type="button" class="btn btn-default" data-dismiss="modal">Fermer</button>
 			</div>
 		  </div>		  
