--- a/client/app/index.html
+++ b/client/app/index.html
@@ -141,7 +141,7 @@
 			<div class="middleLeft" id="menu">
                     <nav>
                         <!-- Menu <input type="checkbox" ng-model="displayFavoriteSeries"> -->
-                        <a href="" ng-click="ListMenu=!ListMenu">Menu</a>
+                        <a href="" ng-click="ListMenu=!ListMenu; GenreFilm=false; GenreSerie=false">Menu</a>
 
                         <!-- <p ng-model="displayFavoriteSeries">Menu</p> -->
                         <ul ng-show="ListMenu">
@@ -191,7 +191,7 @@
 			
 			<footer> 
 				<div class="infoFooter">
-					Contact
+					<a href="">Contact</a>
 				</div>
 			</footer> 
 		</div>
@@ -251,7 +251,7 @@
 	        </div>
 
 	        <div class="modal-body" style="padding:40px 50px;">
-	          <form role="form" name="myFormLogin">
+	          <form role="form" name="myFormLogin" ng-submit="vm.register()">
 	            <div class="form-group">
 	              <label for="email">Adresse e-mail:</label>
 	              <input type="email" name="email" class="form-control" ng-model="email" required>                    
@@ -262,7 +262,7 @@
 	              <p style="text-align:right; "><a href="">Mot de passe oublié</a></p>
 	            </div>
 	            
-	            <span style="color:red" ng-show="myFormLogin.email.$dirty && myFormLogin.email.$invalid">
+	            <span style="color:red" ng-show="myFormLogin.email.$dirty; myFormLogin.email.$invalid">
                 <span ng-show="myFormLogin.email.$error.required">Email is required.</span>
                 <span ng-show="myFormLogin.email.$error.email">Invalid email address.</span>
                 </span>
@@ -403,27 +403,28 @@
 			<div class="modal-body">
 				<table class="table table-hover">
 					<tr><td>
-							<div class="paramLeft">
-								<p><input type="text" class="form-control" id="name" placeholder="Nom"></p>
-					<p><input width="50%" type="text" class="form-control" id="pName" placeholder="Prenom"></p>
-					<p><input type="text" class="form-control" id="adress" placeholder="Adresse"> </p>
-					<p style="display: flex; width:40%;">
-					<input type="text" class="form-control" id="zipCode" placeholder="Code Postal" title="Ex: 38000"> <select id="country" class="form-control" width:40%;" id="sel1"> <option>France</option> </select>
-					</p>
-					<p><input type="tel" class="form-control" id="phone" placeholder="Telephone"></p>
-							</div>
-						</td><td>	
-							<div class="paramRight">
-								<input type="email" class="form-control" id="mail" placeholder="Email">
-								<input type="password" class="form-control" id="pwd" placeholder="Mot de Passe"> 
-								</b> <input type="password" class="form-control" id="pwd2" placeholder="Mot de Passe">	
-							</div>
-						</td></tr>
+					<div class="paramLeft">
+						<p><input type="text" class="form-control" id="name" placeholder="Nom"></p>
+						<p><input width="50%" type="text" class="form-control" id="pName" placeholder="Prenom"></p>
+						<p><input type="text" class="form-control" id="adress" placeholder="Adresse"> </p>
+						<p style="display: flex; width:40%;">
+						<p><input type="text" class="form-control" id="zipCode" placeholder="Code Postal" title="Ex: 38000"> </p>
+						<p style="display:inline-block;"><select id="country" class="form-control" id="sel1" placeholder="Pays"><option>France</option> </select></p>
+						</p>
+						<p><input type="tel" class="form-control" id="phone" placeholder="Telephone"></p>
+					</div>
+					</td><td>	
+					<div class="paramRight">
+						<input type="email" class="form-control" id="mail" placeholder="Email">
+						<input type="password" class="form-control" id="pwd" placeholder="Mot de Passe"> 
+						</b> <input type="password" class="form-control" id="pwd2" placeholder="Mot de Passe">	
+					</div>
+					</td></tr>
 					<tr><td colspan="2"></td></tr>
 					<tr><td colspan="2">
-						<div class="checkbox">
-								<label><input type="checkbox"> <b>j'aimerais de recevoir des notifications par mail</b></label>
-						</div>
+					<div class="checkbox">
+						<label><input type="checkbox"> <b>j'aimerais de recevoir des notifications par mail</b></label>
+					</div>
 					</td></tr>
 					<tr><td colspan="2"><a href="" class="btn" data-toggle="modal" data-target="#deleteC">Supprimer Compte<span class="glyphicon glyphicon-trash"></span></a></td></tr>
 				</table>					
