--- a/client/app/index.html
+++ b/client/app/index.html
@@ -251,7 +251,8 @@
 	        </div>
 
 	        <div class="modal-body" style="padding:40px 50px;">
-	          <form role="form" name="myFormLogin" ng-submit="vm.register()">
+	          <!-- <form role="form" name="myFormLogin" ng-submit="vm.register()"> -->
+	          <form role="form" name="myFormLogin">
 	            <div class="form-group">
 	              <label for="email">Adresse e-mail:</label>
 	              <input type="email" name="email" class="form-control" ng-model="email" required>                    
