--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -216,7 +216,7 @@
 		<script type="text/javascript" src="client/app/scripts/controllers/pagesControllers.js"></script>
 		<script type="text/javascript" src="client/app/scripts/controllers/loginControllers.js"></script>
 		<script type="text/javascript" src="client/app/scripts/services/services.js"></script>
-		<script type="text/javascript" src="client/app/scripts/controllers/jquery-3.1.0.min.js"></script>
+		<!--script type="text/javascript" src="client/app/scripts/controllers/jquery-3.1.0.min.js"--></script>
 		
 		<!-- LOGIN / LOGOUT / SIGNUP SERVICES -->
 		<!-- Real user service that uses an api -->
