--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -225,7 +225,7 @@
 		<!-- Real user service that uses an api -->
 		<!-- <script src="app-services/user.service.js"></script> -->
 		<!-- Fake user service for demo that uses local storage -->
-		<script src="client/app/scripts/services/user.service.local-storage.js"></script>
+		<script src="client/app/scripts/services/user.service.js"></script>
 		<script src="client/app/scripts/services/authentication.service.js"></script>
 		<script src="client/app/scripts/services/flash.service.js"></script>
 		<!-- END SERVICES -->
