--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -123,6 +123,7 @@
 			   		</div>
 
 			    	<div ng-show="usert[0]">
+			    		<li>{{usert[1]}}</li>
 						<li><button class="btn" type="button" data-toggle="dropdown" id="userIcone"><span class="glyphicon glyphicon-user"/>
 						  <span class="caret"></span></button>
 						  <ul class="dropdown-menu">
