--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -124,7 +124,7 @@
 			   		</div>
 
 			    	<div ng-show="usert[0]">
-			    		<li>{{usert[1]}}</li>
+			    		<!-- <li>{{usert[1]}}</li> -->
 
 						<li><button class="btn" type="button" data-toggle="dropdown" id="userIcone"><span class="glyphicon glyphicon-user"/>
 						  <span class="caret"></span></button>
@@ -467,14 +467,14 @@
 				<!--a href="" ng-click=""><span class="glyphicon glyphicon-edit"></span></a-->
 					<tr><td>
 						<div class="paramLeft">
-							<p>{{user.lastName}}</p>
+							<!-- <p>{{user.lastName}}</p>
 							<p>{{user.firstName}}</p>
 							<p>{{user.address}}</p>
 							<p>{{user.zipcode}} {{user.country}}</p>
 							<p>{{user.city}}</p>
 							<p>{{user.phone}}</p>
 							<p>{{user.coins}}</p>
-
+ -->
 							<!-- <p><input type="text" class="form-control" id="name" placeholder="Nom"></p>
 							<p><input width="50%" type="text" class="form-control" id="pName" placeholder="Prenom"></p>
 							<p><input type="text" class="form-control" id="adress" placeholder="Adresse"> </p>
