bande annonce + icone user

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -123,7 +123,7 @@ Z<!DOCTYPE html>
 			    		<a href="" data-toggle="modal" data-target="#dialogSign_up"><b>Inscription</b></a></li>
 			   		</div>
 
-			    	<div ng-show="usert[0]">
+			    	<div ng-show="usert">
 			    		<!-- <li>{{usert[1]}}</li> -->
 
 						<li><button class="btn" type="button" data-toggle="dropdown" id="userIcone"><span class="glyphicon glyphicon-user"/>
