--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -59,7 +59,7 @@
 			      </li>
 			      <li>
 			      	<p ng-show="BtnSearch" class="searchIndex">
-			            <input ng-model="queryIndex" type="text" class="txtSearchIndex" placeholder="Rechercher titre, acteur, realisateur ..." pattern="[a-z]{1,50}"/>
+			            <input ng-model="queryIndex" type="text" class="txtSearchIndex" placeholder="Rechercher titre, acteur, realisateur ..."/>
 
 			            <button type="submit" ng-click="searchAction2()" ><span class="glyphicon glyphicon-search"></span></button>
 
@@ -124,6 +124,8 @@
 			   		</div>
 
 			    	<div ng-show="usert">
+			    		<li>{{globals.currentUser.firstName}}</li>
+
 						<li><button class="btn" type="button" data-toggle="dropdown" id="userIcone"><span class="glyphicon glyphicon-user"/>
 						  <span class="caret"></span></button>
 						  <ul class="dropdown-menu">
@@ -136,7 +138,7 @@
 
 
 					<!-- Panier -->
-					<li><a  href="" ng-click="loadPanierI()" data-toggle="modal" data-target="#dialogPanier"  class="btn" style=" margin-right:30%; padding-top:20%;"><span class="glyphicon glyphicon-shopping-cart"></span></a></li>
+					<li><a  href="" data-toggle="modal" data-target="#dialogPanier"  class="btn" style=" margin-right:30%; padding-top:20%;"><span class="glyphicon glyphicon-shopping-cart"></span></a></li>
 			    	
 			    </ul>
 			    </div>
@@ -333,7 +335,7 @@
 		</div>
 	  </div>
 	 <!-- End Modal SIGN UP --> 
-	 
+
 </div>
 
 
@@ -402,6 +404,7 @@
 			</div>
 		</div>		  
 		</div>		
+
 	</div>
 		<!-- End Modal PANIER --> 
 		
@@ -451,6 +454,7 @@
 	 
 	<!-- Modal PARAMETER -->
 	<div class="modal fade" id="dialogParameter" role="dialog">
+
 		<div class="modal-dialog">		
 		  <!-- Modal content-->
 		  <div class="modal-content">
@@ -458,30 +462,38 @@
 			  <button type="button" class="close" data-dismiss="modal">&times;</button>
 			  <h4 class="modal-title">Parametres</h4>
 			</div>
-			<div class="modal-body">				
+			<div class="modal-body" ng-controller="userCtrl">
 				<table class="table table-hover">
 				<!--a href="" ng-click=""><span class="glyphicon glyphicon-edit"></span></a-->
 					<tr><td>
 						<div class="paramLeft">
-							<p><input type="text" class="form-control" id="name" placeholder="Nom"></p>
+							<!-- <p>{{user.lastName}}</p>
+							<p>{{user.firstName}}</p>
+							<p>{{user.address}}</p>
+							<p>{{user.zipcode}} {{user.country}}</p>
+							<p>{{user.city}}</p>
+							<p>{{user.phone}}</p>
+							<p>{{user.coins}}</p>
+ -->
+							<!-- <p><input type="text" class="form-control" id="name" placeholder="Nom"></p>
 							<p><input width="50%" type="text" class="form-control" id="pName" placeholder="Prenom"></p>
 							<p><input type="text" class="form-control" id="adress" placeholder="Adresse"> </p>
 							<p style="display: flex;">
 							<input type="text" class="form-control" id="zipCode" style="width:80px" placeholder="Code Postal" title="Ex: 38000"> <select id="country" class="form-control" id="sel1"> <option>France</option> </select>
 							</p>
-							<p><input type="tel" class="form-control" id="phone" placeholder="Telephone"></p>
+							<p><input type="tel" class="form-control" id="phone" placeholder="Telephone"></p> -->
 						</div>
-						</td><td>	
+						<!-- </td><td>	
 							<div class="paramRight">
 								<input type="email" class="form-control" id="mail" placeholder="Email">
 								<input type="password" class="form-control" id="pwd" placeholder="Mot de Passe"> 
 								</b> <input type="password" class="form-control" id="pwd2" placeholder="Mot de Passe">	
 							</div>
-						</td></tr>
+						</td></tr> -->
 					<tr><td colspan="2"></td></tr>
 					<tr><td colspan="2">
 					<div class="checkbox">
-						<label><input type="checkbox"> <b>j'aimerais de recevoir des notifications par mail</b></label>
+						<label><input type="checkbox"> <b>Je souhaite être averti par e-mail des nouveaux ajouts</b></label>
 					</div>
 					</td></tr>
 					<tr><td colspan="2"><a href="" class="btn" data-toggle="modal" data-target="#deleteC">Supprimer Compte<span class="glyphicon glyphicon-trash"></span></a></td></tr>
