add total price for cart

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -391,7 +391,7 @@
 					<tfoot>
 					<tr><td colspan="7"></td></tr>
 
-					<tr><td colspan="3"></td><td colspan="2"><b>Total du panier : </b></td><td><b>{{dataPanierTotal[0]}}€</b></td><td></td></tr>
+					<tr><td colspan="3"></td><td colspan="2"><b>Total du panier</b></td><td><b>{{totalPrice}}€</b></td><td></td></tr>
 
 					</tbody>
 				</table>
