--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -53,7 +53,7 @@
 
 			    <ul class="nav navbar-nav">
 			      <li><a href="" ng-click="back()"><span class="glyphicon glyphicon-circle-arrow-left"/></a></li>
-			      <li><a href="#home" ng-click="BtnSearch = !BtnSearch"><span class="glyphicon glyphicon-home"/></a></li>
+			      <li><a href="#home"><span class="glyphicon glyphicon-home"/></a></li>
 
 			      <li><a href="" ng-click="BtnSearch = !BtnSearch"><span class="glyphicon glyphicon-search"/></a> <!--ng-hide="BtnSearch"-->
 			      </li>
@@ -374,7 +374,7 @@
 							<td><input type="number" class="form-control" ng-init="txtQuantite=data.quantity" ng-model="data.quantity" style="width:80px" value={{data.quantity}} ng-change="updateQuantite(data.idProduct, data.quantity)" min="1" max="999" ng-disabled="disabledCopieNum(data.support)"/></td>
 							<td>{{data.unitPrice}}€</td>
 							<td>{{data.quantity*data.unitPrice}}€</td>
-							<td><button type="button" class="btn btn-primary" ng-click="deletePanier(data.idProduct)" data-dismiss="modal"><span class="glyphicon glyphicon-trash"></span></button>
+							<td><button class="btn btn-primary" ng-click="deletePanier(data.idProduct)"><span class="glyphicon glyphicon-trash"></span></button>
 							<!-- <button type="button" ng-click="deletePanier({{data.idProduct}})"><span class="glyphicon glyphicon-trash"></span></a> -->
 							<!-- <a href="" ng-click=""><span class="glyphicon glyphicon-edit"></span></a></td>						 -->
 						</tr>
